--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         .typed {
             display: inline;
             font-weight: bold;
-            color: #fff;
+            color: #000;
             text-shadow: 0 0 5px rgba(234, 228, 228, 0.5); /* Add shadow to text for better visibility */
         }
 
